making a nicer homepage

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,19 +10,23 @@ body {
     padding-top: 3rem;
     padding-bottom: 3rem;
     color: #5a5a5a;
-  }
-  
-  
-  .themed-grid-col {
+}
+
+
+.themed-grid-col {
     padding-top: .75rem;
     padding-bottom: .75rem;
     background-color: rgba(86, 61, 124, .15);
     border: 1px solid rgba(86, 61, 124, .2);
-  }
-  
-  .themed-container {
+}
+
+.themed-container {
     padding: .75rem;
     margin-bottom: 1.5rem;
     background-color: rgba(0, 123, 255, .15);
     border: 1px solid rgba(0, 123, 255, .2);
-  }
+}
+
+.object_fit {
+    object-fit: none;
+}
