--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,23 +10,15 @@ body {
     padding-top: 3rem;
     padding-bottom: 3rem;
     color: #5a5a5a;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+
 }
 
 
-.themed-grid-col {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    background-color: rgba(86, 61, 124, .15);
-    border: 1px solid rgba(86, 61, 124, .2);
-}
-
-.themed-container {
-    padding: .75rem;
-    margin-bottom: 1.5rem;
-    background-color: rgba(0, 123, 255, .15);
-    border: 1px solid rgba(0, 123, 255, .2);
-}
-
-.object_fit {
-    object-fit: none;
-}
+/* Styles required only for the example above */
+.scrollspy-example-collapsible {
+    position: relative;
+    height: 200px;
+    overflow: auto;
+  }
