fixing some issues

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,3 +20,10 @@ body.banner-offset {
   #sidebarMenu .nav-link.active {
     text-decoration: underline;
   }
+  footer {
+    h1, h2, h3, h4, h5, h6 {
+      font-size: 80%;
+    }
+  }
+
+ 
