--- a/src/templates/template-content.html
+++ b/src/templates/template-content.html
@@ -111,6 +111,27 @@
       </div>
     </footer>
 
+	<!-- Modal -->
+	<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  <div class="modal-dialog">
+		<div class="modal-content">
+		  <div class="modal-header">
+			<h5 class="modal-title" id="exampleModalLabel">Terms of Service</h5>
+			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		  </div>
+		  <div class="modal-body">
+			<!-- Terms of service text goes here -->
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vel nibh in felis lacinia sagittis. Nullam ut lectus ipsum. Suspendisse ut tincidunt lorem. Duis vitae libero vitae sapien accumsan dignissim id vel lorem. Sed id enim non leo efficitur eleifend. </p>
+		  </div>
+		  <div class="modal-footer">
+			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+			<button type="button" class="btn btn-primary" id="acceptBtn">Accept</button>
+		  </div>
+		</div>
+	  </div>
+	</div>
+
+	<script src="../js/template-content.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
