Adds or Modifies content throughout. Actual words are generated in conjunction with use of ChatGPT. Touched and refactored almost every rendered file.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,7 +17,8 @@ body.banner-offset {
   margin-top: calc(var(--bs-gutter-y) + var(--banner-height));
 }
 
-#sidebarMenu .nav-link.active {
+#sidebarMenu .nav-link.active,
+#toc_menu .nav-link.active {
   text-decoration: underline;
 }
 footer {
