--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,15 +1,8 @@
 // Import all of Bootstrap's CSS
 @import "~bootstrap/scss/bootstrap";
-@import 'bootstrap-icons/font/bootstrap-icons.css';
+@import "bootstrap-icons/font/bootstrap-icons.css';
 
-/* GLOBAL STYLES
--------------------------------------------------- */
-/* Padding below the footer and lighter body text */
-html {
-    overflow-y: scroll;
-  }
-
-:root {
+;root {
     --banner-height: 64px;
   }
 
@@ -20,6 +13,7 @@ body.banner-offset {
   #sidebarMenu .nav-link.active {
     text-decoration: underline;
   }
+  
   footer {
     h1, h2, h3, h4, h5, h6 {
       font-size: 80%;
