Added style css

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,6 @@
 // Import all of Bootstrap's CSS
 @import "~bootstrap/scss/bootstrap";
-@import "bootstrap-icons/font/bootstrap-icons.css';
+@import "bootstrap-icons/font/bootstrap-icons.css";
 
 ;root {
     --banner-height: 64px;
