--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,23 +1,24 @@
 // Import all of Bootstrap's CSS
 @import "~bootstrap/scss/bootstrap";
-@import "bootstrap-icons/font/bootstrap-icons.css';
+@import "bootstrap-icons/font/bootstrap-icons.css";
 
-;root {
-    --banner-height: 64px;
-  }
+html {
+  overflow-y: scroll;
+}
+
+:root {
+  --banner-height: 64px;
+}
 
 body.banner-offset {
-    margin-top: calc(var(--bs-gutter-y) + var(--banner-height));
-  }
+  margin-top: calc(var(--bs-gutter-y) + var(--banner-height));
+}
 
-  #sidebarMenu .nav-link.active {
-    text-decoration: underline;
+#sidebarMenu .nav-link.active {
+  text-decoration: underline;
+}
+footer {
+  h1, h2, h3, h4, h5, h6 {
+    font-size: 80%;
   }
-  
-  footer {
-    h1, h2, h3, h4, h5, h6 {
-      font-size: 80%;
-    }
-  }
-
- 
+}
