--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,7 +12,7 @@ main {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: c1ceb9;
+    background-color: #c1ceb9;
   }
   
 .container {
