updated webpage graphic

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,8 @@
 // Import all of Bootstrap's CSS
 @import "~bootstrap/scss/bootstrap";
 @import 'bootstrap-icons/font/bootstrap-icons.css';
+@import 'cookie-banner';
+
 
 /* GLOBAL STYLES
 -------------------------------------------------- */
